--- a/Copy Clever/Base.lproj/GeneralPreferencesView.xib
+++ b/Copy Clever/Base.lproj/GeneralPreferencesView.xib
@@ -18,11 +18,11 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="1">
-            <rect key="frame" x="0.0" y="-1" width="500" height="400"/>
+            <rect key="frame" x="0.0" y="-1" width="470" height="330"/>
             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
             <subviews>
                 <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="173">
-                    <rect key="frame" x="38" y="328" width="193" height="18"/>
+                    <rect key="frame" x="38" y="258" width="193" height="18"/>
                     <buttonCell key="cell" type="check" title="Launch CopyClever at login" bezelStyle="regularSquare" imagePosition="left" inset="2" id="174">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
@@ -32,7 +32,7 @@
                     </connections>
                 </button>
                 <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="190">
-                    <rect key="frame" x="38" y="208" width="193" height="18"/>
+                    <rect key="frame" x="38" y="138" width="193" height="18"/>
                     <buttonCell key="cell" type="check" title="Show desktop notifications" bezelStyle="regularSquare" imagePosition="left" inset="2" id="191">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
@@ -42,7 +42,7 @@
                     </connections>
                 </button>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ma5-3s-KQ8">
-                    <rect key="frame" x="38" y="232" width="100" height="18"/>
+                    <rect key="frame" x="38" y="162" width="100" height="18"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="Notifications" id="CHQ-g0-4J6">
                         <font key="font" metaFont="systemBold"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -50,7 +50,7 @@
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3J8-9G-4kx">
-                    <rect key="frame" x="38" y="305" width="169" height="17"/>
+                    <rect key="frame" x="38" y="235" width="169" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Start CopyClever automatically" id="ho1-NB-3Fp">
                         <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="headerColor" catalog="System" colorSpace="catalog"/>
@@ -58,7 +58,7 @@
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zqh-GH-WWF">
-                    <rect key="frame" x="38" y="185" width="261" height="17"/>
+                    <rect key="frame" x="38" y="115" width="261" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Display notifications if a new item was recorded" id="5Xr-gS-cBT">
                         <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="headerColor" catalog="System" colorSpace="catalog"/>
@@ -66,8 +66,8 @@
                     </textFieldCell>
                 </textField>
                 <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GBz-4D-mc6">
-                    <rect key="frame" x="38" y="135" width="187" height="18"/>
-                    <buttonCell key="cell" type="check" title="Use same font for all items" bezelStyle="regularSquare" imagePosition="left" inset="2" id="64c-XG-uPm">
+                    <rect key="frame" x="38" y="65" width="214" height="18"/>
+                    <buttonCell key="cell" type="check" title="Use same font for all text items" bezelStyle="regularSquare" imagePosition="left" inset="2" id="64c-XG-uPm">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
                     </buttonCell>
@@ -76,7 +76,7 @@
                     </connections>
                 </button>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Bb0-uz-n6V">
-                    <rect key="frame" x="38" y="159" width="100" height="18"/>
+                    <rect key="frame" x="38" y="89" width="100" height="18"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="Appearance" id="thQ-VD-Y6O">
                         <font key="font" metaFont="systemBold"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -84,22 +84,22 @@
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cfu-rY-AkI">
-                    <rect key="frame" x="38" y="112" width="377" height="17"/>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Display all of recorded items in CopyClever's window with a same font" id="Ymh-fJ-RfF">
+                    <rect key="frame" x="38" y="42" width="400" height="17"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Display all of recorded text items in CopyClever's window with a same font" id="Ymh-fJ-RfF">
                         <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="headerColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
                 <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8vo-aA-xEV">
-                    <rect key="frame" x="38" y="281" width="204" height="18"/>
+                    <rect key="frame" x="38" y="211" width="204" height="18"/>
                     <buttonCell key="cell" type="check" title="Restore pasteboard at launch" bezelStyle="regularSquare" imagePosition="left" inset="2" id="TLY-bh-9Sy">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
                     </buttonCell>
                 </button>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3tX-H0-qzW">
-                    <rect key="frame" x="38" y="258" width="356" height="17"/>
+                    <rect key="frame" x="38" y="188" width="356" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Put the last recorded item back to pasteboard if CopyClever starts" id="AdU-Pm-Ky6">
                         <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="headerColor" catalog="System" colorSpace="catalog"/>
@@ -107,7 +107,7 @@
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="195">
-                    <rect key="frame" x="38" y="352" width="100" height="18"/>
+                    <rect key="frame" x="38" y="282" width="100" height="18"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="Startup" id="196">
                         <font key="font" metaFont="systemBold"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -115,7 +115,7 @@
                     </textFieldCell>
                 </textField>
             </subviews>
-            <point key="canvasLocation" x="159" y="-10"/>
+            <point key="canvasLocation" x="144" y="-45"/>
         </customView>
     </objects>
 </document>
