--- a/Copy Clever/ChangeGroupNameSheetController.xib
+++ b/Copy Clever/ChangeGroupNameSheetController.xib
@@ -50,14 +50,6 @@ Gw
                             <action selector="didTapDoneButton:" target="-2" id="v6J-x6-2tA"/>
                         </connections>
                     </button>
-                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Lca-pj-Jiv">
-                        <rect key="frame" x="33" y="109" width="185" height="43"/>
-                        <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="center" title="Place holder for changing group name" id="1zO-Dy-9nr">
-                            <font key="font" metaFont="cellTitle"/>
-                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                        </textFieldCell>
-                    </textField>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="TzY-00-Dkh" secondAttribute="bottom" constant="9" id="Fqp-xo-2kR"/>
@@ -69,6 +61,8 @@ Gw
             <connections>
                 <outlet property="delegate" destination="-2" id="0bl-1N-AYu"/>
             </connections>
+            <point key="canvasLocation" x="-188" y="120"/>
         </window>
+        <collectionViewItem id="FIu-Nl-RwS"/>
     </objects>
 </document>
